+ get city by Global Id
